Closed
Bug 1624130
Opened 5 years ago
Closed 5 years ago
Require CK_FUNCTION_LIST structs to be packed
Categories
(NSS :: Libraries, defect)
NSS
Libraries
Tracking
(Not tracked)
RESOLVED
FIXED
3.52
People
(Reporter: kjacobs, Assigned: kjacobs)
Details
Attachments
(1 file)
After bug 1603628, the CK_FUNCTION_LIST struct (2_0 definition) in some Windows builds has 6 bytes of padding added, presumably after the version numbers. This causes some crashes in Firefox.
We should require these structs to be packed.
Assignee | ||
Comment 1•5 years ago
|
||
Assignee | ||
Comment 2•5 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.52
You need to log in
before you can comment on or make changes to this bug.
Description
•