Bug 1624130 - Require CK_FUNCTION_LIST structs to be packed. r=rrelyea

Differential Revision: https://phabricator.services.mozilla.com/D67741

--HG--
extra : moz-landing-system : lando